--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.0",
+    "pg-format": "^1.0.4",
     "pg-native": "^3.0.0",
     "sass": "^1.35.1",
     "twilio": "^3.71.2"
