update readme and example file

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ DB_NAME=midterm
 # Uncomment and set to true for Heroku
 # DB_SSL=true if heroku
 DB_PORT=5432
+# Twilio information for text message notifications *account needed
+TWILIO_ACCOUNT_SID
+TWILIO_AUTH_TOKEN
+TWILIO_PHONE
+RESTAURANT_PHONE
+CUSTOMER_PHONE
